welcome.lessons.welcome.loopfor.LoopStairs.scala.code
var nbPas=0
for(nbPas <1 to 8) {
while(!estFaceMur){
	avance();
} 
{
	gauche();avance();droite();avance();
}
}